--- a/One-Wallet/Resources/en.lproj/Localizable.strings
+++ b/One-Wallet/Resources/en.lproj/Localizable.strings
@@ -1,17 +1,38 @@
 /* Created with Localizable Strings Merge, the swiss-army knife for iOS and OS X localization. */
 
+/* Default title for buttons inside forms */
+"FormViewController.submitButtonText.title" = "Next";
+
 /* Place holder for phone number */
-"SignUpViewController.PhoneNumberField.PlaceHolder" = "Phone Number"; /* NEW */
+"SignUpViewController.PhoneNumberField.PlaceHolder" = "Phone Number";
 
 /* Title for signup button */
-"SignUpViewController.SignupButton.Title" = "Signup"; /* NEW */
+"SignUpViewController.SignupButton.Title" = "Signup";
 
 /* Text for title */
-"SignUpViewController.TitleText.text" = "Enter your phone number to get started"; /* NEW */
+"SignUpViewController.TitleText.text" = "Enter your phone number to get started";
 
 /* Continue Button */
-"SplashViewController.ContinueButton" = "Continue"; /* NEW */
+"SplashViewController.ContinueButton" = "Continue";
 
 /* First screen welcoming text */
-"SplashViewController.ExplanationText" = "Welcome to One Wallet, where you can manage wallets with friends and family"; /* NEW */
+"SplashViewController.ExplanationText" = "Welcome to One Wallet, where you can manage wallets with friends and family";
+
+/* First screen header text */
+"SplashViewController.HeaderText" = "One Wallet";
+
+/* Place holder for otp */
+"VerifyPhoneNumberViewController.OTPField.PlaceHolder" = "Code";
+
+/* Title for request code again button */
+"VerifyPhoneNumberViewController.RequestCode.Title" = "I didn't get a code";
+
+/* Title for submit button button */
+"VerifyPhoneNumberViewController.SubmitButton.Title" = "Verify"; /* NEW */
+
+/* Text for title */
+"VerifyPhoneNumberViewController.TitleText.text" = "Enter the code we sent to";
+
+/* Title for wrong number button */
+"VerifyPhoneNumberViewController.WrongNumber.Title" = "Wrong number?";
 
